--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 backtrace = "0.3"
 dirs = "2"
+roxmltree = "0.10"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
