--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 [dependencies]
 backtrace = "0.3"
 dirs = "3"
-roxmltree = "0.13"
+roxmltree = { version = "0.14", features = ["std"] }
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
 serde_yaml = "0.8"
-ssh2 = "0.8"
+ssh2 = "0.9"
